<resources>
    <string name="app_name">TreasureHunt</string>
    <string name="app_creator">Sykes</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">My Hunts</string>
    <string name="title_section3">All Hunts</string>
    <string name="title_section4">Create Hunt</string>
    <string name="title_section5">Update Username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Change Username</string>

    <string name="str_atv_places">AIzaSyCzZyu_3CqWZQf7yADLDhwnQkdxrMVcEnE</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnCreateSchedule">Create</string>
    <string name="tvChooseName">Pick a name for your hunt</string>
    <string name="tvYourName">Enter Your Name</string>
    <string name="tvHuntDetails">Pick a name for your hunt</string>
    <string name="hintStartTypingPlace">Start typing place name</string>
    <string name="tStartLocation">Enter start location</string>
    <string name="tvFinishLocation">Enter finish location</string>
    <string name="title_activity_view_hunt">ViewHunt</string>
    <string name="title_activity_add_location">AddLocatiom</string>

    <string name="hello_world">Hello world!</string>
    <string name="huntNameHint">Hunt Name</string>
    <string name="al_huntName">Enter Hunt Name</string>
    <string name="hint_huntName">Hunt Name</string>
    <string name="al_location">Enter Location Name</string>
    <string name="hint_location">Location Name</string>
    <string name="al_position">Enter a Position in Hunt</string>
    <string name="hint_position">Position</string>
    <string name="al_description">Enter Location Description</string>
    <string name="hint_description">Description</string>
    <string name="al_latitude">Enter a Latitude</string>
    <string name="hint_latitude">Latitude</string>
    <string name="al_longitude">Enter Longitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="al_question">Enter Question for Location</string>
    <string name="hint_question">Question</string>
    <string name="al_answer">Enter Answer for Question</string>
    <string name="hint_answer">Answer</string>
    <string name="al_clue">Enter a Clue for the Question</string>
    <string name="hint_clue">Clue</string>
    <string name="al_saveLocation">Save Location</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
