<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_huntName"
            android:id="@+id/lblHuntName"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            android:layout_gravity="right"
            android:hint="@string/hint_huntName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_location"
            android:id="@+id/lblLocationName"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLocation"
            android:hint="@string/hint_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_position"
            android:id="@+id/lblPosition"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPosition"
            android:hint="@string/hint_position" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_description"
            android:id="@+id/lblDescription"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescription"
            android:hint="@string/hint_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_latitude"
            android:id="@+id/lblLatitude"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLatitude"
            android:hint="@string/hint_latitude" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_longitude"
            android:id="@+id/lblLongitude"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLongitude"
            android:hint="@string/hint_longitude" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_question"
            android:id="@+id/lblQuestion"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtQuestion"
            android:hint="@string/hint_question" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/al_answer"
            android:id="@+id/lblAnswer"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAnswer"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_answer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/al_clue"
            android:id="@+id/lblClue"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtClue"
            android:hint="@string/hint_clue" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveLocation"
            android:text="@string/al_saveLocation"
            android:background="@drawable/rectangle_button_selector"
            android:textColor="@color/colorWhite"
            android:tint="@android:color/white"
            android:textSize="@dimen/abc_text_size_large_material"
            android:elevation="4dp"
            android:enabled="false" />
    </LinearLayout>
</ScrollView>