<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="net.as93.homesafe.CreateSchedule"
        tools:ignore="MergeRootFrame"
        android:padding="@dimen/zero">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SubtitleText"
            android:text="@string/tStartLocation"
            android:id="@+id/subTitle1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:background="@drawable/big_card"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:id="@+id/createScheduleSec1"
            android:layout_below="@+id/subTitle1">

            <net.as93.treasurehunt.utils.autocomplete.AutocompletePlaces
                android:id="@+id/placesAutocompleteStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintStartTypingPlace"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <fragment
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/mapFragmentInnerStart"
                android:layout_margin="8dp"/>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SubtitleText"
            android:text="@string/tvFinishLocation"
            android:id="@+id/subTitle2"
            android:layout_below="@+id/createScheduleSec1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"
            android:background="@drawable/big_card"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:id="@+id/createScheduleSec2"
            android:layout_below="@+id/subTitle2">

            <net.as93.treasurehunt.utils.autocomplete.AutocompletePlaces
                android:id="@+id/placesAutocompleteFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintStartTypingPlace"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <fragment
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/mapFragmentInnerFinish"
                android:layout_margin="8dp"/>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SubtitleText"
            android:text="@string/tvHuntDetails"
            android:id="@+id/subTitle3"
            android:layout_below="@+id/createScheduleSec2"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:background="@drawable/big_card"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:id="@+id/createScheduleSec3"
            android:layout_below="@+id/subTitle3"
            android:layout_marginBottom="25dp">

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/huntName"
                android:hint="@string/huntNameHint" />

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"
            android:text="@string/btnCreateSchedule"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_button_selector"
            android:textColor="@color/colorWhite"
            android:tint="@android:color/white"
            android:textSize="@dimen/abc_text_size_large_material"
            android:elevation="4dp"

            />

    </RelativeLayout>
</ScrollView>